set(MODULE_NAME test)
# --------------------------------------------------------------

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  

