cmake_minimum_required(VERSION 2.8)
if(UNIX)
  if(APPLE)
    set(PLAT "posix")
    set(PLAT_LINK "")
    set(CMAKE_CXX_FLAGS "-mmacosx-version-min=10.4 -g -Wall")
    set(CMAKE_OSX_ARCHITECTURES "i386;x86_64" CACHE STRING "Build architectures for OSX" FORCE)
  else(APPLE)
    set(PLAT "posix")
    set(PLAT_LINK avahi-client rt)
    set (CMAKE_CXX_FLAGS "-g -Wall")
  endif(APPLE)
else(UNIX)
  if(WIN32)
    set(PLAT "win32")
    set (CMAKE_CXX_FLAGS "-g -Wall")
  else(WIN32)
    set(PLAT "unsupported")
  endif(WIN32)
endif(UNIX)
MESSAGE("Platform is ${PLAT}")

project (OSCPACK)
file (GLOB OSCPACK_SOURCES ip/*.cpp ip/${PLAT}/*.cpp osc/*.cpp)
MESSAGE("srs in oscpack ${OSCPACK_SOURCES}")
include_directories (${OSCPACK_SOURCE_DIR})

add_library (oscpack STATIC ${OSCPACK_SOURCES})
