# --------------------------------------------------------------
#  time_ref
# --------------------------------------------------------------
add_subdirectory(time_ref)

# --------------------------------------------------------------
#  core_core
# --------------------------------------------------------------
add_subdirectory(core)

# --------------------------------------------------------------
#  msgpack
# --------------------------------------------------------------
add_subdirectory(msgpack)

