include_directories(core)

# --------------------------------------------------------------
#  lua
# --------------------------------------------------------------
add_subdirectory(lua)

# --------------------------------------------------------------
#  lua_dump
# --------------------------------------------------------------
add_subdirectory(lua_dump)

# --------------------------------------------------------------
#  msgpack
# --------------------------------------------------------------
add_subdirectory(msgpack)

# --------------------------------------------------------------
#  time_ref
# --------------------------------------------------------------
add_subdirectory(time_ref)

# --------------------------------------------------------------
#  core
# --------------------------------------------------------------
add_subdirectory(core)
