include_directories(core)

# --------------------------------------------------------------
#  lua
# --------------------------------------------------------------
add_subdirectory(lua)

# --------------------------------------------------------------
#  lua_dump
# --------------------------------------------------------------
add_subdirectory(lua_dump)

# --------------------------------------------------------------
#  msgpack
# --------------------------------------------------------------
add_subdirectory(msgpack)

# --------------------------------------------------------------
#  more
# --------------------------------------------------------------
add_subdirectory(more)
