include_directories(more)

# --------------------------------------------------------------
#  lua
# --------------------------------------------------------------
add_subdirectory(lua)

# --------------------------------------------------------------
#  lua_dump
# --------------------------------------------------------------
add_subdirectory(lua_dump)

# --------------------------------------------------------------
#  more
# --------------------------------------------------------------
add_subdirectory(more)
